--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Select And Share Project</title>
-    <script src="app.js" defer></script>
+    <script src="dist/bundle.js" defer></script>
+    <link rel="stylesheet" href="app.css" />
   </head>
-  <body></body>
+  <body>
+    <div id="map"><p>Please enter an address!</p></div>
+    <form>
+      <input type="text" id="address" /><button type="submit">
+        SEARCH ADDRESS
+      </button>
+    </form>
+  </body>
 </html>
